swaps controller
